--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-app-router",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://heronguyen26071996.github.io/deploy-github/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,6 +10,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^4.1.1",
     "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "^16.13.1",
@@ -19,12 +21,15 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.0"
+  
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
